Fix HTML/CSS sidebar layout issue

--- a/src/main/webapp/css/book_torutk.css
+++ b/src/main/webapp/css/book_torutk.css
@@ -7,6 +7,7 @@ body {
     "header header" auto
     "sidebar main" 1fr
     "footer footer" auto / auto 1fr;
+    gap: 20px;
     height: 100vh;
 }
 
@@ -51,9 +52,4 @@ th, td {
 
 tr:nth-child(even) {
     background-color: whitesmoke;
-}
-
-aside {
-    display: grid;
-    grid-template-columns: 30% 30% 30%;
 }
